plugins {
    id 'java'
    id 'idea'
}

group 'codesquad'
version '1.0-SNAPSHOT'
sourceCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {

    implementation 'ch.qos.logback:logback-classic:1.2.3'
    implementation 'com.google.guava:guava:29.0-jre'
    implementation 'ch.qos.logback:logback-classic:1.2.3'
    implementation 'com.github.jknack:handlebars:4.2.0'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    testImplementation 'org.mockito:mockito-inline:3.6.0'
    testImplementation 'org.assertj:assertj-core:3.16.1'
    testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'

}

test {
    useJUnitPlatform()
}

repositories {
    mavenCentral()
}
